# service_v3

./: .pre-commit-config.yaml  Makefile  pyproject.toml
service_v3/: main.py
service_v3/controller/: example_controller.py
service_v3/core/: config.py
service_v3/service/: md5_service.py
tests/: conftest.py
tests/controller/: example_controller_test.py
tests/service/: md5_service_test.py
