[tool.poetry]
name = "service-v3"
version = "0.1.0"
description = ""
authors = ["Tom Rozekrans <tom.rozekrans@cgi.com>"]
readme = "README.md"
packages = [{include = "service_v3"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
sqlalchemy = "^2.0.10"
uvicorn = "^0.21.1"
python-dotenv = "^1.0.0"
pytest = "^7.3.1"
httpx = "^0.24.0"
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.2.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
